--- a/ocmoni6/html/datasourceEdit.html
+++ b/ocmoni6/html/datasourceEdit.html
@@ -105,47 +105,58 @@
                 <div class="form-group">
                     <label class="pure-u-1-8 control-label">行程种类</label>
                     <div class="pure-u-1-4">
-                        <input type="text" class="form-control"  placeholder="行程种类">
+                        <span class="radio-inline">
+                             <input type="radio" /> <label for="">国内</label>
+                        </span>
+                        <span class="radio-inline">
+                             <input type="radio" /> <label for="">国际</label>
+                        </span>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="pure-u-1-8 control-label">数据来源</label>
                     <div class="pure-u-1-4">
-                        <input type="text" class="form-control"  placeholder="数据来源">
+                        <span class="radio-inline">
+                             <input type="radio" /> <label for="">ATPCO数据</label>
+                        </span>
+                        <span class="radio-inline">
+                             <input type="radio" /> <label for="">航信数据</label>
+                        </span>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="pure-u-1-8 control-label">部门代码</label>
                     <div class="pure-u-1-2">
-                        <span class="table_control">
+                        <div style="padding-top: 7px">
                             <a href="">填写表格</a>
-                        </span>
-                        <div class="table_layout" style="width: 300px">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th>发布对象类型</th>
-                                        <th>部门代码</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            <select name="" id="" class="common_input">
-                                                <option value="">选择</option>
-                                                <option value="">1</option>
-                                            </select>
-                                        </td>
-                                        <td>
-                                            <input type="text" class="common_input"/>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <div>
+                                <div class="table_layout" style="width: 300px">
+                                    <table>
+                                        <thead>
+                                        <tr>
+                                            <th>发布对象类型</th>
+                                            <th>部门代码</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td>
+                                                <select name="" id="" class="common_input">
+                                                    <option value="">选择</option>
+                                                    <option value="">1</option>
+                                                </select>
+                                            </td>
+                                            <td>
+                                                <input type="text" class="common_input"/>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
-
                     </div>
                 </div>
 
